# beanzero

./: README.md  pyproject.toml
example/: budget.yml  budget.zbb.json  ledger.bean  test.py
src/beanzero/: __init__.py
src/beanzero/budget/: __init__.py  budget.py  core.py  model.py  spec.py  store.py
src/beanzero/tui/: __init__.py  app.py  bean_zero.tcss  category.py  category_table.py  interface.py  top_bar.py
test/: conftest.py  test_budget.py  test_budget_calculations.py  test_budget_integration.py  test_spec.py  test_store.py
test/data/: sample-budget.bean  sample-budget.json  sample-budget.yml
