[project]
name = "beanzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lachie H", email = "lh@lachs.au" }]
requires-python = ">=3.10"
dependencies = [
    "beancount>=3.1.0",
    "cattrs>=25.1.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "textual>=5.3.0",
]

[project.scripts]
beanzero = "beanzero:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.37.0",
    "textual-dev>=1.7.0",
]
