[project]
name = "beanzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Lachie H", email = "lh@lachs.au" }]
requires-python = ">=3.10.0"
dependencies = [
    "babel>=2.17.0",
    "beancount>=3.1.0",
    "cattrs>=25.1.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "textual>=5.3.0",
]

[project.scripts]
beanzero = "beanzero:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipython>=8.37.0", "pytest>=9.0.0", "ruff>=0.12.9", "textual-dev>=1.7.0"]

[tool.pytest]
markers = [
    "spec_file: get Budget and BudgetSpec fixtures to load from this file in ./test/data",
    "store_file: get BudgetStore fixture to load from this file in ./test/data",
]
